firewall/ip6tables
# Generated by ip6tables-save v1.8.4 on Wed Nov 18 16:54:42 2020
*nat
:PREROUTING ACCEPT [5:376]
:INPUT ACCEPT [5:376]
:OUTPUT ACCEPT [1:80]
:POSTROUTING ACCEPT [1:80]
COMMIT
# Completed on Wed Nov 18 16:54:42 2020
# Generated by ip6tables-save v1.8.4 on Wed Nov 18 16:54:42 2020
*raw
:PREROUTING ACCEPT [7752:573288]
:OUTPUT ACCEPT [119:24715]
COMMIT
# Completed on Wed Nov 18 16:54:42 2020
# Generated by ip6tables-save v1.8.4 on Wed Nov 18 16:54:42 2020
*mangle
:PREROUTING ACCEPT [7772:574728]
:INPUT ACCEPT [168:27208]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [119:24715]
:POSTROUTING ACCEPT [119:24715]
COMMIT
# Completed on Wed Nov 18 16:54:42 2020
# Generated by ip6tables-save v1.8.4 on Wed Nov 18 16:54:42 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:f2b-sshd - [0:0]
-A INPUT -m state --state INVALID -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m multiport --dports 25,53,80,443,587,993,22345 -j ACCEPT
-A INPUT -p udp -m multiport --dports 53 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::1/128 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::6/128 -j ACCEPT
-A INPUT -s 2a02:1811:c10:7000:2905:aa18:afa1:1f66/128 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A f2b-sshd -j RETURN
COMMIT
# Completed on Wed Nov 18 16:54:42 2020
