firewall/iptablesfirewall
# Generated by ip6tables-save v1.8.4 on Mon Nov 16 14:42:08 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [120:14672]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m multiport --dports 25,53,80,443,587,993,22345 -j ACCEPT
-A INPUT -p udp -m multiport --dports 53 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::1/128 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::6/128 -j ACCEPT
-A INPUT -s 2a02:1811:c10:7000:2905:aa18:afa1:1f66/128 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Nov 16 14:42:08 2020
